[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/screens/MedicCodeScreen.gd" type="Script" id=1]
[ext_resource path="res://src/user interface/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/screens/NameField.gd" type="Script" id=3]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/user interface/backgrounds/Choice.png" type="Texture" id=5]
[ext_resource path="res://assets/user interface/bubblebuttons/png/Button_32.png" type="Texture" id=6]
[ext_resource path="res://assets/user interface/themes/AlloyInk-lgdWw.otf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=5]
size = 40
outline_color = Color( 1, 0.8, 0, 1 )
font_data = ExtResource( 7 )

[node name="MedicCodeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.517708
anchor_right = 0.5
anchor_bottom = 0.517708
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MedicCodeField" type="LineEdit" parent="Menu"]
margin_right = 400.0
margin_bottom = 192.0
size_flags_vertical = 3
align = 1
max_length = 10
placeholder_text = "CODICE MEDICO"
script = ExtResource( 3 )

[node name="SendButton" parent="Menu" instance=ExtResource( 2 )]
margin_top = 207.0
margin_right = 400.0
margin_bottom = 399.0
rect_pivot_offset = Vector2( 200, 100 )
text = "INVIA"
script = null

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="BackButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -457.0
margin_top = -210.0
margin_right = -307.0
margin_bottom = -60.0
rect_pivot_offset = Vector2( 75, 75 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
next_scene_path = "res://src/screens/ChoiseScreen.tscn"

[node name="NotificationPanel" type="PanelContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.91875
anchor_right = 0.5
anchor_bottom = 0.91875
margin_left = -250.0
margin_top = -27.0
margin_right = 250.0
margin_bottom = 27.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Notification" type="Label" parent="NotificationPanel"]
margin_top = 7.0
margin_right = 500.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="focus_entered" from="Menu/MedicCodeField" to="Menu/MedicCodeField" method="_on_focus_entered"]
[connection signal="pressed" from="Menu/SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
